// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > AllColors 1`] = `
<div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-default text-default-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2"
      >
        default
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-primary text-primary-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2"
      >
        primary
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-secondary text-secondary-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2"
      >
        secondary
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-success text-success-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2"
      >
        success
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-warning text-warning-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2"
      >
        warning
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-danger text-danger-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2"
      >
        danger
      </span>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > AllRadius 1`] = `
<div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-none bg-default text-default-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2"
      >
        none
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-small bg-default text-default-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2"
      >
        sm
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-medium bg-default text-default-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2"
      >
        md
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-large bg-default text-default-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2"
      >
        lg
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-default text-default-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2"
      >
        full
      </span>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > AllSizes 1`] = `
<div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-6 text-tiny rounded-full bg-default text-default-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-1"
      >
        sm
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-default text-default-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2"
      >
        md
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-2 h-8 text-medium rounded-full bg-default text-default-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2"
      >
        lg
      </span>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > AllVariants 1`] = `
<div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-success text-success-foreground"
    >
      <span
        class="flex-1 text-inherit font-normal px-2"
      >
        solid
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap border-medium px-1 h-7 text-small rounded-full bg-transparent border-success text-success"
    >
      <span
        class="flex-1 text-inherit font-normal px-2"
      >
        bordered
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-transparent text-success"
    >
      <span
        class="flex-1 text-inherit font-normal px-2"
      >
        light
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-success/20 text-success-600 dark:text-success"
    >
      <span
        class="flex-1 text-inherit font-normal px-2"
      >
        flat
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap border-medium px-1 h-7 text-small rounded-full border-default bg-default-100 text-success"
    >
      <span
        class="flex-1 text-inherit font-normal px-2"
      >
        faded
      </span>
    </div>
  </div>
  <div
    style="margin-top: 10px;"
  >
    <div
      class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap border-medium border-default text-foreground bg-transparent px-1 h-7 text-small rounded-full"
    >
      <span
        class="w-2 h-2 ml-1 rounded-full bg-success"
      />
      <span
        class="flex-1 text-inherit font-normal px-2"
      >
        dot
      </span>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > Default 1`] = `
<div>
  <div
    class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-default text-default-foreground"
  >
    <span
      class="flex-1 text-inherit font-normal px-2"
    >
      Some Label
    </span>
  </div>
</div>
`;

exports[`Story Snapshots > EndContent 1`] = `
<div>
  <div
    class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-default text-default-foreground"
  >
    <span
      class="flex-1 text-inherit font-normal px-2 pr-1"
    >
      Some Label
    </span>
    <svg
      class="max-h-[80%]"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M156.6 384.9L125.7 354c-8.5-8.5-11.5-20.8-7.7-32.2c3-8.9 7-20.5 11.8-33.8L24 288c-8.6 0-16.6-4.6-20.9-12.1s-4.2-16.7 .2-24.1l52.5-88.5c13-21.9 36.5-35.3 61.9-35.3l82.3 0c2.4-4 4.8-7.7 7.2-11.3C289.1-4.1 411.1-8.1 483.9 5.3c11.6 2.1 20.6 11.2 22.8 22.8c13.4 72.9 9.3 194.8-111.4 276.7c-3.5 2.4-7.3 4.8-11.3 7.2v82.3c0 25.4-13.4 49-35.3 61.9l-88.5 52.5c-7.4 4.4-16.6 4.5-24.1 .2s-12.1-12.2-12.1-20.9V380.8c-14.1 4.9-26.4 8.9-35.7 11.9c-11.2 3.6-23.4 .5-31.8-7.8zM384 168a40 40 0 1 0 0-80 40 40 0 1 0 0 80z"
      />
    </svg>
  </div>
</div>
`;

exports[`Story Snapshots > StartContent 1`] = `
<div>
  <div
    class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap px-1 h-7 text-small rounded-full bg-default text-default-foreground"
  >
    <svg
      class="max-h-[80%]"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M156.6 384.9L125.7 354c-8.5-8.5-11.5-20.8-7.7-32.2c3-8.9 7-20.5 11.8-33.8L24 288c-8.6 0-16.6-4.6-20.9-12.1s-4.2-16.7 .2-24.1l52.5-88.5c13-21.9 36.5-35.3 61.9-35.3l82.3 0c2.4-4 4.8-7.7 7.2-11.3C289.1-4.1 411.1-8.1 483.9 5.3c11.6 2.1 20.6 11.2 22.8 22.8c13.4 72.9 9.3 194.8-111.4 276.7c-3.5 2.4-7.3 4.8-11.3 7.2v82.3c0 25.4-13.4 49-35.3 61.9l-88.5 52.5c-7.4 4.4-16.6 4.5-24.1 .2s-12.1-12.2-12.1-20.9V380.8c-14.1 4.9-26.4 8.9-35.7 11.9c-11.2 3.6-23.4 .5-31.8-7.8zM384 168a40 40 0 1 0 0-80 40 40 0 1 0 0 80z"
      />
    </svg>
    <span
      class="flex-1 text-inherit font-normal px-2 pl-1"
    >
      Some Label
    </span>
  </div>
</div>
`;
